--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,3 +1,12 @@
-.app_navbar {
+.app__navbar {
   width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--color-crimson);
+   /* padding: 1rem 2rem; */
 }
+
+/* .app__navbar-links {}
+
+.p__opensans {} */
