--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -3,10 +3,52 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: var(--color-crimson);
-   /* padding: 1rem 2rem; */
+  background-color: var(--color-black);
+  padding: 1rem 2rem;
 }
 
-/* .app__navbar-links {}
+.app__navbar-logo {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
 
-.p__opensans {} */
+.app__navbar-logo img {
+  width: 150px;
+}
+
+.app__navbar-links {
+  display: flex;
+  flex: 1;
+  justify-content: center;
+  align-items: center;
+
+  list-style: none;
+}
+
+.app__navbar-links li {
+  margin: 0 1rem;
+  cursor: pointer;
+}
+
+.app__navbar-links li:hover {
+  color: var(--color-grey)
+}
+
+.app__navbar-login {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.app__navbar-login a {
+  margin: 0 1rem;
+  text-decoration: none;
+  transition: .5s ease;
+}
+
+.app__navbar-login a:hover {
+  border-bottom: 1px solid var(--color-golden);
+}
+
+.p__opensans {}
