--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -90,10 +90,20 @@
 .app__navbar-smallscreen_links li {
   margin: 2rem;
   cursor: pointer;
-  color:var(--color-golden);
+  color: var(--color-golden);
   font-size: 2rem;
   text-align: center;
   font-family: var(--font-base);
+}
+
+.app__navbar-smallscreen_links li:hover {
+  color: var(--color-white)
+}
+
+@media screen and (max-width:2000px) {
+  .app__navbar-logo img {
+    width: 210px;
+  }
 }
 
 @media screen and (max-width:1150px) {
@@ -103,5 +113,19 @@
 
   .app__navbar-smallscreen {
     display: flex;
+  }
+}
+
+@media screen and (max-width:650px) {
+  .app__navbar {
+    padding: 1rem;
+  }
+
+  .app__navbar-login {
+    display: none;
+  }
+
+  .app__navbar-logo img {
+    width: 110px;
   }
 }
