--- a/src/container/Header/Header.css
+++ b/src/container/Header/Header.css
@@ -1,1 +1,21 @@
-.app__header app__wrapper section__padding
+.app__header {
+  background-color: var(--color-black);
+}
+
+.app__header-h1 {
+  font-family: var(--font-base);
+  color: var(--color-golden);
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  line-height: 117px;
+  font-size: 90px;
+}
+
+
+.app__wrapper_img {}
+
+.app__wrapper {}
+
+.section__padding {}
+
+.app__wrapper_info {}
