--- a/src/container/Gallery/Gallery.css
+++ b/src/container/Gallery/Gallery.css
@@ -25,10 +25,11 @@
 .app__gallery-images {
   flex: 1;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   max-width: 50%;
   position: relative;
 }
+
 
 .app__gallery-images_container {
   display: flex;
@@ -54,7 +55,8 @@
   position: absolute;
   color: #fff;
   font-size: 2rem;
-  opacity: .5s ease;
+  opacity: 0.5;
+  transition: .5s ease;
   cursor: pointer;
 }
 
@@ -67,7 +69,7 @@
 }
 
 .app__gallery-images_card:hover img {
-  opacity: 0.35
+  opacity: 0.35;
 }
 
 
@@ -81,15 +83,69 @@
   justify-content: space-between;
   align-items: center;
 
-  padding:0 1rem;
+  padding: 0 1rem;
   position: absolute;
   bottom: 5%;
 }
 
 .gallery__arrow-icon {
-  color:var(--color-golden);
+  color: var(--color-golden);
   font-size: 2rem;
   cursor: pointer;
   background: var(--color-black);
   border-radius: 5px;
+}
+
+.gallery__arrow-icon:hover {
+  color: var(--color-white)
+}
+
+@media screen and (min-width: 2000px) {
+  .app__gallery-content {
+    min-width: 1000px;
+    padding-right: 4rem;
+  }
+
+  .app__gallery-images_card {
+    min-width: 400px;
+    height: 550px;
+  }
+
+  .app__gallery-images {
+    max-width: 100%;
+    margin: 5rem 0;
+  }
+}
+
+@media screen and (max-width: 1150px) {
+  .app__gallery {
+    flex-direction: column;
+  }
+
+  .app__gallery-images {
+    max-width: 100%;
+    margin: 5rem 0;
+  }
+}
+
+@media screen and (max-width: 850px) {
+  .app__gallery {
+    padding: 4rem 0 4rem 4rem;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .app__gallery {
+    padding: 4rem 0 4rem 2rem;
+  }
+
+  .app__gallery-content {
+    min-width: 100%;
+
+  }
+
+  .app__gallery-images_card {
+    min-width: 240px;
+    height: 320px;
+  }
 }
